--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.imgur.com/6LZ5QjD.jpg') center center fixed;
+      background: url('https://pin.it/5QEFbzXhC') center center fixed;
       background-size: cover;
       font-family: 'Caveat', cursive;
       overflow-x: hidden;
@@ -79,10 +79,10 @@
       max-width: 800px;
       margin: 40px auto;
       padding: 30px;
-      background: url('https://i.imgur.com/FWxYK9P.png');
+      background: url('https://pin.it/5QEFbzXhC');
       background-size: cover;
       border: 15px solid transparent;
-      border-image: url('https://i.imgur.com/2tBvRlX.png') 80 stretch;
+      border-image: url('https://pin.it/5QEFbzXhC') 80 stretch;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       position: relative;
       min-height: 500px;
@@ -262,4 +262,4 @@
   </script>
 
 </body>
-  </html>
+</html>
